--- a/app/views/birthdays/index.html.erb
+++ b/app/views/birthdays/index.html.erb
@@ -1,4 +1,8 @@
 <h1>Birthdays</h1>
+<%= form_tag({:controller => 'birthdays', :action => 'search'}, {:id => 'search'}) do %>
+  <%= select_date Date.today, {:use_month_numbers => true} %>
+  <%= submit_tag '検索' %>
+<% end %>
 <table>
   <tr>
     <th>id</th>
