--- a/app/views/birthdays/edit.html.erb
+++ b/app/views/birthdays/edit.html.erb
@@ -1,3 +1,3 @@
 <h1>Editing birthday</h1>
 <%= render 'form' %>
-<%= link_to 'Show', @birthday %> | <%= link_to 'Back', birthdays_path %>
+<%= link_to 'Show', @birthday %> | <%= link_to 'Back', :action => 'search' %>
