--- a/app/views/birthdays/show.html.erb
+++ b/app/views/birthdays/show.html.erb
@@ -23,4 +23,4 @@
 <%= @birthday.link %>
 </p>
 
-<%= link_to 'Edit', edit_birthday_path(@birthday) %> | <%= link_to 'Back', birthdays_path %>
+<%= link_to 'Edit', edit_birthday_path(@birthday) %> | <%= link_to 'Back', :action => 'search' %>
